@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-08-18T08:18:51Z",
+  "timestamp" : "2022-08-18T16:27:09Z",
   "count_outdated" : 463,
   "uniques_outdated" : 264,
-  "count" : 490,
+  "count" : 489,
   "uniques" : 283,
   "clones" : [
     {
       "timestamp": "2022-08-04T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 2 ]
