@@ -1,10 +1,10 @@
 {
-  "count": 27,
+  "count": 26,
   "uniques": 13,
   "clones": [
     {
       "timestamp": "2022-08-04T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "uniques": 1
     },
     {
